# Pitchmind

./: .cursorrules  .gitignore  README.md  docker-compose.yml  pitchmind_roadmap_v0.4.md  render.yaml
ai-engine/: pyproject.toml
ai-engine/pitchmind_ai/: __init__.py
ai-engine/pitchmind_ai/biomechanics/: backlift.py  calculator.py  centre_of_mass.py  elbow.py  footwork.py  head.py  hip_shoulder.py  kinetic_chain.py  knee.py  length_judging.py  pci_calculator.py  shot_classifier.py  stance.py  sweet_spot.py  tactical_advisor.py  timing.py  wrist.py
ai-engine/pitchmind_ai/coaching/: engine.py  new_insights_draft.py
ai-engine/pitchmind_ai/extractors/: delivery_segmenter.py  frame_extractor.py
ai-engine/pitchmind_ai/models/: frame.py  landmarks.py  metrics.py  results.py
ai-engine/pitchmind_ai/pipeline/: batting_pipeline.py  config.py
ai-engine/pitchmind_ai/pose/: estimator.py
ai-engine/pitchmind_ai/utils/: constants.py  geometry.py
ai-engine/tests/: test_biomechanics.py  test_elbow.py  test_geometry.py
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: database.py  logging.py  ownership.py  schema_migrate.py  security.py  storage_paths.py
backend/app/models/: analysis.py  base.py  user.py  video.py
backend/app/schemas/: analysis.py  auth.py  upload.py
backend/app/services/: analysis_service.py  claude_service.py  conditioning_service.py  openai_service.py  otp_service.py  storage_service.py  upload_service.py
backend/app/workers/: analysis_worker.py  progress_store.py
backend/pitchmind_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_conditioning.py  test_jwt_auth.py  test_kinetic_chain.py  test_kinetic_chain_native.py  test_live_api.py  test_storage_pipeline.py  test_upload_limits.py
(+74 files in other folders)
